# scratch-compositor

./: .gitignore  COMPOSITOR.md  CONFIG.md  PROTOCOLS.md  README.md  meson.build  stackcomp.conf.example
config/: stackcomp.conf
data/: stackcomp.desktop
src/: config.c  config.h  ext_workspace.c  ext_workspace.h  main.c  server.h
testing/: stackcomp.conf  waybar-stackcomp.css  waybar-stackcomp.jsonc
